2014-09-15  Khem Raj <raj.khem@gmail.com>
	* grub-core/kern/emu/hostfs.c: use _DEFAULT_SOURCE in addition to
	_BSD_SOURCE to avoid warnings under glibc 2.20+.

2014-06-21  Роман Пехов <roman_pekhov>

	* grub-core/commands/loadenv.c (check_blocklists): Fix overlap check.

2014-06-21  Glenn Washburn <development@efficientek.com>

	* util/grub-install.c: Fix handling of --disk-module.

2014-06-21  Stephane Rochoy <sheda>

	* grub-core/loader/i386/bsd.c (grub_netbsd_boot): Pass pointer to
	EFI system table.

2014-06-21  Stephane Rochoy <sheda>

	* grub-core/commands/efi/lsefisystab.c (grub_cmd_lsefisystab): Show
	EFI system table physical address.

2014-06-21  Trevor Woerner <trevor.woerner@linaro.org>

	* util/grub-gen-asciih.c (add_glyph): Fix uninitialised variable.

2014-06-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/verify.c (grub_pubkey_open): Trust procfs.

2014-06-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/verify.c (grub_pubkey_open): Fix memdisk
	check.

2014-04-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/misc.c (__bzero): Don't compile in GRUB_UTIL.

	Reported by: Yves Blusseau <blusseau@zetam.org>.

2014-04-20  Piotr Krysiuk  <piotras@gmail.com>

	* grub-core/lib/i386/relocator.c: Allow loading old kernels by placing
	GDT in conventional memory.

2014-04-10  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub.d/30_os-prober.in: Tolerate devices with no filesystem
	UUID.  Other parts of grub-mkconfig tolerate these, they were
	previously allowed here up to commit
	55e706c918922def17f5012c23cfe88c4c645208, and they can arise in
	practice when the system has active LVM snapshots.
	Fixes Ubuntu bug #1287436.

2014-04-10  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/disk/lvm.c (grub_lvm_detect): Search for
	"logical_volumes" block a little more accurately.

2014-04-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/syslinux_parse.c: Fix timeout quoting.
